--- a/styles/main.css
+++ b/styles/main.css
@@ -7,8 +7,8 @@ body {
 
 header {
     height: 7rem;
-    background-color: #333;
-    color: #fff;
+    background-color: #3a29db;
+    color: #faf1a0;
     text-align: center;
     padding: 1em;
 }
@@ -18,8 +18,8 @@ section {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #3a29db;
+    color: #faf1a0;
     text-align: center;
     padding: 1em;
     position: fixed;
@@ -45,14 +45,32 @@ footer {
 }
 
 .product {
-    border: 1px solid rgb(41, 30, 68);
     flex-grow: 3;
+    margin-right: 2rem;
+    margin-left: 2rem;
 }
 
 .container {
     display: flex;
 }
 
+.image {
+    position: relative;
+    width: 20rem;
+    height: 20rem;
+    overflow: hidden;
+    margin-right: 4rem;
+    margin-left: 4rem;
+}
+
+.image > img {
+    width: 100%;
+    height: auto;
+}
+
+.description {
+    margin-right: 2rem;
+}
 
 
 .product.middlediv {
