--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,10 @@
 header {
   height: 7rem;
   background-color: #3a29db;
-  color: #faf1a0;
   text-align: center;
-  padding: 1em;
+  color: aqua;
+  border: 1px solid black;
+  padding: 2em;
 }
 
 .menu {
@@ -64,6 +65,13 @@ section {
   display: flex;
   flex-direction: column;
   flex-basis: 30%;
+}
+
+.absolute-tovar {
+  position: absolute;
+  right: 0;
+  width: 300px;
+  top: 0;
 }
 
 .image {
