--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,2 +1,8 @@
+@mixin theme ($theme:aqua) {
+    color: $theme;
+    border: 1px solid black;
+    padding: 2em;
+}
+
 @import 'assets/header', 'assets/footer', 'assets/page';
 
