--- a/assets/scss/assets/_page.scss
+++ b/assets/scss/assets/_page.scss
@@ -1,17 +1,35 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
+    color: rgb(8, 34, 74);
     margin: 0;
     padding: 0;
-    background-color: #c7b9b9;
+    background-color: rgb (228,255,248);  
+}
+
+.hhh{
+    font-weight: 500;
+    font-size: 50px;
+    margin: 0;
+}
+
+h2 {
+    font-size: 40px;
+    margin: 0;
+    line-height: 20PX;
+}
+
+.strong {
+    font-weight: 900;
 }
 
 section {
     padding: 2em;
 }
 
-.product {
-    margin-right: 2rem;
-    margin-left: 2rem;
+U {
+    text-decoration-color: rgb(110,255,208);
+    font-weight: bolder;
+    text-underline-offset: 8px;
 }
 
 .blank {
@@ -20,9 +38,41 @@ section {
 }
 
 .container {
-    display: flex;
+    display: flex;  
     flex-wrap: wrap;
     width: 100%;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    padding-top: 120px;
+}
+
+.bottom {
+    color: #ffffff;
+    display: flex;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background: rgb(4,247,171);
+    background: linear-gradient(90deg, rgba(4,247,171,1) 0%, rgba(1,184,172,1) 100%);
+    text-align: center;
+    display: inline-block;
+    height: 4rem;
+    line-height: 4rem;
+    width: 80%;
+    max-width: 15rem;
+    font-size: 20px;
+    /* box-shadow: 0 0 5px 5px rgb(255, 255, 255); */
+    border-radius: 10px;
+    border: 2px solid #00a99b;
+}
+
+.line {
+    background: rgb(110,255,208);
+    display: block;
+    height: 100%;
+    float: left;
+    width: 5px;
+    margin-right: 1rem;
+    padding-bottom: 2rem;
 }
 
 .tovar {
@@ -32,19 +82,15 @@ section {
 }
 
 .absolute-tovar {
-    position: absolute;
-    right: 0;
-    width: 300px;
-    top: 0;
+    position: relative;
+    width: 500px;
+    margin-right: 10rem;
 }
 
 .image {
-    position: relative;
-    width: 10rem;
-    height: 10rem;
-    overflow: hidden;
-    margin-right: 4rem;
-    margin-left: 4rem;
+    position: absolute;
+    width: 20rem;
+    height: 20rem;
 }
 
 .image > img {
@@ -52,6 +98,3 @@ section {
     height: auto;
 }
 
-.description {
-    margin-right: 2rem;
-}
