--- a/assets/scss/assets/_header.scss
+++ b/assets/scss/assets/_header.scss
@@ -1,13 +1,13 @@
 header {
-    height: 7rem;
-    background-color: #3a29db;
+    height: 3rem;
+    background-color:  rgb(110,255,208);
     text-align: center;
     @include theme;
 }
 
 .menu {
     list-style: none;
-    float: left;
+    float: none;
 }
 
 .menu-item {
@@ -17,7 +17,7 @@ header {
 }
 
 .menu-item a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-weight: bold;
 }
