--- a/assets/scss/assets/_footer.scss
+++ b/assets/scss/assets/_footer.scss
@@ -53,4 +53,4 @@ footer {
 }
 
 /* Почему bootsrtrap не работает если появляются свойства значит он работает. 
-С рабочим бутсрапом сделай колонны с ul ссылка в it https://getbootstrap.com/docs/4.0/layout/grid/
+С рабочим бутсрапом сделай колонны с ul ссылка в it https://getbootstrap.com/docs/4.0/layout/grid/ */ 
