--- a/assets/scss/assets/_page.scss
+++ b/assets/scss/assets/_page.scss
@@ -44,6 +44,7 @@ U {
     margin-right: 2rem;
     margin-left: 2rem;
     padding-top: 120px;
+    margin-bottom: 10rem;
 }
 
 .bottom {
@@ -57,10 +58,24 @@ U {
     display: inline-block;
     height: 4rem;
     line-height: 4rem;
-    width: 80%;
-    max-width: 15rem;
+    width: 12rem;
     font-size: 20px;
     /* box-shadow: 0 0 5px 5px rgb(255, 255, 255); */
+    border-radius: 10px;
+    border: 2px solid #00a99b;
+}
+
+.bottom-near {
+    color: #ffffff;
+    background: rgb(4,247,171);
+    background: linear-gradient(90deg, rgba(4,247,171,1) 0%, rgba(1,184,172,1) 100%);
+    text-align: center;
+    height: 4rem;
+    margin-top: 3rem;
+    line-height: 4rem;
+    width: 3rem;
+    max-width: 15rem;
+    font-size: 20px;
     border-radius: 10px;
     border: 2px solid #00a99b;
 }
