--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,216 +1,1 @@
-@charset "UTF-8";
-header {
-  height: 3rem;
-  background-color: rgb(110, 255, 208);
-  text-align: center;
-  color: #00aeb4;
-  padding: 1em;
-}
-
-.menu {
-  list-style: none;
-  float: none;
-}
-
-.menu-item {
-  list-style: none;
-  display: inline;
-  margin-right: 1em;
-}
-
-.menu-item a {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-footer {
-  text-align: center;
-  padding: 1em;
-  bottom: 0;
-  width: 100%;
-  display: inline-block;
-}
-
-.second-button {
-  display: flex;
-  background-color: #ffffff;
-  height: 5rem;
-  width: 5rem;
-  margin-bottom: 1em;
-  box-shadow: 0 0 5px 5px rgb(110, 255, 208);
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 3rem;
-  border: 0;
-  float: left;
-  margin-left: 3rem;
-}
-.second-button span {
-  padding-left: 0.5rem;
-  color: rgb(8, 34, 74);
-}
-
-.foot-block {
-  display: flex;
-  position: absolute;
-  background-color: rgb(110, 255, 208);
-  width: 70rem;
-  height: 10rem;
-  text-align: left, center;
-  border-radius: 20px;
-  padding: 0.8rem;
-}
-
-.foot-zagolovok {
-  width: 15rem;
-  font-size: 30px;
-  height: 8rem;
-  border-right: 3px solid white;
-  padding-right: 10rem;
-  padding-left: 3rem;
-}
-
-.foot-image {
-  height: 8rem;
-  width: 14rem;
-  margin-left: 2rem;
-  margin-right: 1rem;
-}
-
-.foot-image > img {
-  height: 7rem;
-  width: auto;
-  padding-top: 1rem;
-}
-
-.description-image-foot {
-  text-align: center;
-  padding-top: 3rem;
-  width: 10rem;
-  height: 8rem;
-  padding-bottom: 3rem;
-}
-
-/* Почему bootsrtrap не работает если появляются свойства значит он работает. 
-С рабочим бутсрапом сделай колонны с ul ссылка в it https://getbootstrap.com/docs/4.0/layout/grid/ */
-body {
-  font-family: "Poppins", sans-serif;
-  color: rgb(8, 34, 74);
-  margin: 0;
-  padding: 0;
-  background-color: rgb 228, 255, 248;
-}
-
-.hhh {
-  font-weight: 500;
-  font-size: 50px;
-  margin: 0;
-}
-
-h2 {
-  font-size: 40px;
-  margin: 0;
-  line-height: 20PX;
-}
-
-.strong {
-  font-weight: 900;
-}
-
-section {
-  padding: 2em;
-}
-
-U {
-  text-decoration-color: rgb(110, 255, 208);
-  font-weight: bolder;
-  text-underline-offset: 8px;
-}
-
-.blank {
-  flex-basis: 100%;
-  width: 0;
-}
-
-.page {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  margin-right: 2rem;
-  margin-left: 2rem;
-  padding-top: 120px;
-  margin-bottom: 10rem;
-}
-
-.bottom {
-  color: #ffffff;
-  display: flex;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  background: rgb(4, 247, 171);
-  background: linear-gradient(90deg, rgb(4, 247, 171) 0%, rgb(1, 184, 172) 100%);
-  text-align: center;
-  display: inline-block;
-  height: 4rem;
-  line-height: 4rem;
-  width: 12rem;
-  font-size: 20px;
-  /* box-shadow: 0 0 5px 5px rgb(255, 255, 255); */
-  border-radius: 10px;
-  border: 2px solid #00a99b;
-}
-
-.bottom-near {
-  color: #ffffff;
-  background: rgb(4, 247, 171);
-  background: linear-gradient(90deg, rgb(4, 247, 171) 0%, rgb(1, 184, 172) 100%);
-  text-align: center;
-  height: 4rem;
-  margin-top: 3rem;
-  line-height: 4rem;
-  width: 3rem;
-  max-width: 15rem;
-  font-size: 20px;
-  border-radius: 10px;
-  border: 2px solid #00a99b;
-}
-
-li {
-  list-style-type: none;
-}
-
-.line {
-  background: rgb(110, 255, 208);
-  display: block;
-  height: 80%;
-  float: left;
-  width: 5px;
-  margin-right: 1rem;
-  margin-bottom: 10rem;
-}
-
-.tovar {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 30%;
-}
-
-.absolute-tovar {
-  position: relative;
-  width: 500px;
-  margin-right: 10rem;
-}
-
-.image {
-  position: absolute;
-  width: 20rem;
-  height: 20rem;
-}
-
-.image > img {
-  width: 100%;
-  height: auto;
-}
-
-/*# sourceMappingURL=main.css.map */
+header{height:3rem;background-color:#6effd0;text-align:center;color:#00aeb4;padding:1em}.menu{list-style:none;float:none}.menu-item{list-style:none;display:inline;margin-right:1em}.menu-item a{color:#000;text-decoration:none;font-weight:bold}footer{text-align:center;padding:1em;bottom:0;width:100%;display:inline-block}.second-button{display:flex;background-color:#fff;height:5rem;width:5rem;margin-bottom:1em;box-shadow:0 0 5px 5px #6effd0;border-radius:50%;display:inline-block;font-size:3rem;border:0;float:left;margin-left:3rem}.second-button span{padding-left:.5rem;color:#08224a}.foot-block{display:flex;position:absolute;background-color:#6effd0;width:70rem;height:10rem;text-align:left,center;border-radius:20px;padding:.8rem}.foot-zagolovok{width:20rem;font-size:30px;height:8rem;border-right:3px solid #fff;padding-top:1.5rem;text-align:left;padding-left:1.5rem}p{vertical-align:middle;height:10rem}.foot-image{height:8rem;width:14rem;margin-left:2rem;margin-right:1rem}.foot-image>img{height:7rem;width:auto;padding-top:1rem}.description-image-foot{text-align:center;padding-top:3rem;width:10rem;height:8rem;padding-bottom:3rem}body{font-family:"Poppins",sans-serif;color:#08224a;margin:0;padding:0;background-color:rgb 228,255,248}.hhh{font-weight:500;font-size:50px;margin:0}h2{font-size:40px;margin:0;line-height:20PX}.strong{font-weight:900}section{padding:2em}U{text-decoration-color:#6effd0;font-weight:bolder;text-underline-offset:8px}.blank{flex-basis:100%;width:0}.page{display:flex;flex-wrap:wrap;width:100%;margin-right:2rem;margin-left:2rem;padding-top:120px;margin-bottom:10rem}.bottom{color:#fff;display:flex;margin-top:3rem;margin-bottom:3rem;background:#04f7ab;background:linear-gradient(90deg, rgb(4, 247, 171) 0%, rgb(1, 184, 172) 100%);text-align:center;display:inline-block;height:4rem;line-height:4rem;width:12rem;font-size:20px;border-radius:10px;border:2px solid #00a99b}.bottom-near{color:#fff;background:#04f7ab;background:linear-gradient(90deg, rgb(4, 247, 171) 0%, rgb(1, 184, 172) 100%);text-align:center;height:4rem;margin-top:3rem;line-height:4rem;padding:0 1.5rem 0 1.5rem;max-width:15rem;font-size:20px;border-radius:10px;border:2px solid #00a99b;margin-left:.5rem}li{list-style-type:none}.line{background:#6effd0;display:block;height:80%;float:left;width:5px;margin-right:1rem;margin-bottom:10rem}.tovar{display:flex;flex-direction:column;flex-basis:30%}.absolute-tovar{position:relative;width:500px;margin-right:10rem}.image{position:absolute;width:20rem;height:20rem}.image>img{width:100%;height:auto}
