--- a/assets/scss/assets/_page.scss
+++ b/assets/scss/assets/_page.scss
@@ -73,11 +73,12 @@ U {
     height: 4rem;
     margin-top: 3rem;
     line-height: 4rem;
-    width: 3rem;
+    padding: 0 1.5rem 0 1.5rem;
     max-width: 15rem;
     font-size: 20px;
     border-radius: 10px;
     border: 2px solid #00a99b;
+    margin-left: 0.5rem;
 }
 
 li {
