--- a/assets/scss/assets/_footer.scss
+++ b/assets/scss/assets/_footer.scss
@@ -19,7 +19,6 @@ footer {
     border: 0;
     float: left;
     margin-left: 3rem;
-
     span {
         padding-left: 0.5rem;
         color: rgb(8, 34, 74);
@@ -38,12 +37,18 @@ footer {
 }
 
 .foot-zagolovok {
-    width: 15rem;
+    width: 20rem;
     font-size: 30px;
     height: 8rem;
     border-right: 3px solid white;
-    padding-right: 10rem;
-    padding-left: 3rem;
+    padding-top: 1.5rem;
+    text-align: left;
+    padding-left: 1.5rem;
+}
+
+p {
+    vertical-align: middle;
+    height: 10rem;
 }
 
 .foot-image{
