--- a/assets/scss/assets/_footer.scss
+++ b/assets/scss/assets/_footer.scss
@@ -29,7 +29,7 @@ footer {
     display: flex;
     position: absolute;
     background-color: rgb(110,255,208);
-    width: 70rem;
+    width: 80rem;
     height: 10rem;
     text-align: left, center;
     border-radius: 20px;
@@ -51,25 +51,27 @@ p {
     height: 10rem;
 }
 
-.foot-image{
-    height: 8rem;
+.foot-image {
     width: 14rem;
     margin-left: 2rem;
     margin-right: 1rem;
 }
 
 .foot-image > img {
-    height: 7rem;
-    width: auto;
-    padding-top: 1rem;
+    height: 100%;
+    width: 10rem;
 }
 
-.description-image-foot {
-    text-align: center;
-    padding-top: 3rem;
+.description-image-foot-1 {
+    padding-top: 1rem;
+    text-align: left;
     width: 10rem;
-    height: 8rem;
-    padding-bottom: 3rem;
+}
+
+.description-image-foot-2 {
+    padding-top: 1rem;
+    text-align: justify;
+    width: 12rem;
 }
 
 /* Почему bootsrtrap не работает если появляются свойства значит он работает. 
