--- a/assets/scss/assets/_footer.scss
+++ b/assets/scss/assets/_footer.scss
@@ -19,6 +19,7 @@ footer {
     border: 0;
     float: left;
     margin-left: 3rem;
+    margin-top: 3rem;
     span {
         padding-left: 0.5rem;
         color: rgb(8, 34, 74);
@@ -28,7 +29,7 @@ footer {
 .foot-block {
     display: flex;
     position: absolute;
-    background-color: rgb(110,255,208);
+    background-color: rgb(4,247,171);
     width: 80rem;
     height: 10rem;
     text-align: left, center;
