Teper vse kak nado 04.12.23

--- a/assets/scss/assets/_page.scss
+++ b/assets/scss/assets/_page.scss
@@ -15,6 +15,12 @@ h2 {
     font-size: 40px;
     margin: 0;
     line-height: 20PX;
+    padding-bottom: 1rem;
+}
+
+
+.begin {
+    line-height: 2rem;
 }
 
 .strong {
