--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,6 +141,11 @@ h2 {
   font-size: 40px;
   margin: 0;
   line-height: 20PX;
+  padding-bottom: 1rem;
+}
+
+.begin {
+  line-height: 2rem;
 }
 
 .strong {
@@ -245,6 +250,53 @@ li {
 .image-tovar > img {
   height: 100%;
   width: auto;
+}
+
+#pop-up {
+  background-color: aquamarine;
+  position: absolute;
+  width: 40rem;
+  height: 10rem;
+  top: 40%;
+  margin-top: -5rem;
+  left: 50%;
+  margin-left: -20rem;
+  border-radius: 10px;
+  padding: 2rem;
+  display: none;
+}
+
+.product {
+  border: 0.5px solid rgb(173, 173, 173);
+  padding: 1rem;
+  margin-bottom: 1rem;
+  background-color: #fff;
+}
+
+.product > Img {
+  width: auto;
+  height: 15rem;
+  padding-left: 10rem;
+  margin-bottom: 1rem;
+}
+
+.page-button {
+  color: #ffffff;
+  display: flex;
+  background: rgb(4, 247, 171);
+  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(1, 184, 172) 100%);
+  text-align: center;
+  display: inline-block;
+  height: 4rem;
+  width: 15rem;
+  line-height: 4rem;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 2px solid #00a99b;
+}
+
+.prize {
+  font-size: 25px;
 }
 
 /*# sourceMappingURL=main.css.map */
