--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,3 @@
-@mixin theme ($theme: #00aeb4) {
-    color: $theme;
-    padding: 1em;
-}
 
-@import 'assets/header', 'assets/footer', 'assets/page';
+@import 'assets/header', 'assets/footer', 'assets/page', 'assets/products';
 
