--- a/assets/scss/assets/_products.scss
+++ b/assets/scss/assets/_products.scss
@@ -1,16 +1,18 @@
 #pop-up {
     background-color: aquamarine;
     position: absolute;
-    width: 40rem;
-    height: 10rem;
+    width: 30rem;
+    height: auto;
     top: 40%;
     margin-top: -5rem;
-    left: 50%;
+    left: 53%;
     margin-left: -20rem;
     border-radius: 10px;
     padding: 2rem;
     display: none;
+    font-size: 1.5rem;
 }
+
 
 .product {
     border: 0.5px solid rgb(173, 173, 173);
