--- a/assets/scss/assets/_products.scss
+++ b/assets/scss/assets/_products.scss
@@ -46,3 +46,14 @@
 .prize {
     font-size: 25px;
 }
+
+#weather {
+    background-color: rgb(215, 255, 250);
+    border: 1px solid white;
+    position: absolute;
+    width: 10rem;
+    height: auto;
+    left: 85%;
+    bottom: 90%;
+    padding: 1rem;
+}
