--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,4 +300,15 @@ li {
   font-size: 25px;
 }
 
+#weather {
+  background-color: rgb(215, 255, 250);
+  border: 1px solid white;
+  position: absolute;
+  width: 10rem;
+  height: auto;
+  left: 85%;
+  bottom: 90%;
+  padding: 1rem;
+}
+
 /*# sourceMappingURL=main.css.map */
